Moved atom excess calc code to separate scripts

--- a/testing/example_dataset_creation_and_testing.Rmd
+++ b/testing/example_dataset_creation_and_testing.Rmd
@@ -443,55 +443,9 @@ Calculation of excess atom fraction (EAF/AEF/AFE)
 
 
 ```{r, warning=F, echo=F, fig.width=3, fig.height=3}
-# calc code 000
+source('test_excess_000.R')
+# returns ae_000 object
 
-mdq <- specify_qsip(md,
-                    abund='qPCR.16S.copies.ul',
-                    density='density.g.ml',
-                    rep_id='RepID',
-                    iso='18O',
-                    iso_trt='tmt')
-
-# calculate atom excess
-mdq <- calc_excess(mdq, separate_label=F, separate_light=F)
-
-# convert to data frame, use c() to remove attributes
-ae <- data.frame(OTU=names(mdq@qsip[['atom_excess']]),
-                 excess=c(mdq@qsip[['atom_excess']]),
-                 stringsAsFactors=F)
-
-ae_qsip <- ae
-
-
-# manual calculation-------------------------------------------
-ae <- mw_000[,!names(mw_000) %in% 'mw_qsip']
-
-# separate MW-light and MW-label
-aeh <- ae[ae$tmt=='18O',]
-ael <- ae[ae$tmt=='16O',]
-
-# calculate MW-heavymax
-adjust <- 12.07747
-nat_abund <- 0.002000429
-ael$mw_max <- (adjust + ael$mw_manual)
-    
-# merge, disregarding tmt
-ae <- merge(aeh[,!names(aeh) %in% 'tmt'], 
-            ael[,!names(ael) %in% 'tmt'],
-            by='OTU',
-            suffixes=c('_label', '_light'))
-
-# calculate atom excess
-ae <- within(ae, {
-  excess <- ((mw_manual_label - mw_manual_light)/(mw_max - mw_manual_light)) * (1 - nat_abund)
-})
-
-
-# compare calculations-----------------------------------------
-ae_000 <- merge(ae_qsip,
-                ae[,c('OTU', 'excess')],
-                by='OTU',
-                suffixes=c('_qsip', '_manual'))
 
 # plot qSIP output against manual output
 gg_ae_000 <- ggplot(ae_000, aes(excess_manual, excess_qsip)) +
@@ -509,56 +463,8 @@ gg_ae_000 <- ggplot(ae_000, aes(excess_manual, excess_qsip)) +
 
 
 ```{r, warning=F, echo=F}
-# calc code 001
-
-mdq <- specify_qsip(md,
-                    abund='qPCR.16S.copies.ul',
-                    density='density.g.ml',
-                    rep_id='RepID',
-                    iso='18O',
-                    iso_trt='tmt')
-
-# calculate atom excess
-mdq <- calc_excess(mdq, separate_label=F, separate_light=T)
-
-# convert to data frame, use c() to remove attributes
-ae <- mat_to_df(mdq@qsip[['atom_excess']], 'excess')
-
-
-ae_qsip <- ae
-
-
-# manual calculation-------------------------------------------
-ae <- mw_001[,!names(mw_001) %in% 'mw_qsip']
-
-# separate MW-light and MW-label
-aeh <- ae[ae$tmt=='18O',]
-ael <- ae[ae$tmt=='16O',]
-
-# DON'T average heavy MWs, they've already been calculated based on averages
-
-# calculate MW-heavymax
-adjust <- 12.07747
-nat_abund <- 0.002001429
-ael$mw_max <- (adjust + ael$mw_manual)
-    
-# merge, disregarding tmt
-ae <- merge(aeh[,!names(aeh) %in% 'tmt'], 
-            ael[,!names(ael) %in% 'tmt'],
-            by=c('RepID', 'OTU'),
-            suffixes=c('_label', '_light'))
-
-# calculate atom excess
-ae <- within(ae, {
-  excess <- ((mw_manual_label - mw_manual_light)/(mw_max - mw_manual_light)) * (1 - nat_abund)
-})
-
-
-# compare calculations-----------------------------------------
-ae_001 <- merge(ae_qsip,
-                ae[,c('RepID', 'OTU', 'excess')],
-                by=c('RepID', 'OTU'),
-                suffixes=c('_qsip', '_manual'))
+source('test_excess_001.R')
+# returns ae_001 object
 
 # plot qSIP output against manual output
 gg_ae_001 <- ggplot(ae_001, aes(excess_manual, excess_qsip)) +
@@ -576,56 +482,8 @@ gg_ae_001 <- ggplot(ae_001, aes(excess_manual, excess_qsip)) +
 
 
 ```{r, warning=F, echo=F}
-# calc code 010
-
-mdq <- specify_qsip(md,
-                    abund='qPCR.16S.copies.ul',
-                    density='density.g.ml',
-                    rep_id='RepID',
-                    iso='18O',
-                    iso_trt='tmt')
-
-# calculate atom excess
-mdq <- calc_excess(mdq, separate_label=T, separate_light=F)
-
-# convert to data frame, use c() to remove attributes
-ae <- mat_to_df(mdq@qsip[['atom_excess']], 'excess')
-
-
-ae_qsip <- ae
-
-
-# manual calculation-------------------------------------------
-ae <- mw_010[,!names(mw_010) %in% 'mw_qsip']
-
-# separate MW-light and MW-label
-aeh <- ae[ae$tmt=='18O',]
-ael <- ae[ae$tmt=='16O',]
-
-# DON'T average light MWs, they've already been calculated based on averages
-
-# calculate MW-heavymax
-adjust <- 12.07747
-nat_abund <- 0.002010429
-ael$mw_max <- (adjust + ael$mw_manual)
-    
-# merge, disregarding tmt
-ae <- merge(aeh[,!names(aeh) %in% 'tmt'], 
-            ael[,!names(ael) %in% 'tmt'],
-            by=c('RepID', 'OTU'),
-            suffixes=c('_label', '_light'))
-
-# calculate atom excess
-ae <- within(ae, {
-  excess <- ((mw_manual_label - mw_manual_light)/(mw_max - mw_manual_light)) * (1 - nat_abund)
-})
-
-
-# compare calculations-----------------------------------------
-ae_010 <- merge(ae_qsip,
-                ae[,c('RepID', 'OTU', 'excess')],
-                by=c('RepID', 'OTU'),
-                suffixes=c('_qsip', '_manual'))
+source('test_excess_010.R')
+# returns ae_010 object
 
 # plot qSIP output against manual output
 gg_ae_010 <- ggplot(ae_010, aes(excess_manual, excess_qsip)) +
@@ -643,61 +501,8 @@ gg_ae_010 <- ggplot(ae_010, aes(excess_manual, excess_qsip)) +
 
 
 ```{r, warning=F, echo=F}
-# calc code 011
-
-# combine new replicate numbers with data
-mdq <- md
-mdq@sam_data$rep_number <- rep_matching_011$rep_number
-
-mdq <- specify_qsip(mdq,
-                    abund='qPCR.16S.copies.ul',
-                    density='density.g.ml',
-                    rep_id='RepID',
-                    rep_num='rep_number',
-                    iso='18O',
-                    iso_trt='tmt')
-
-# calculate atom excess
-mdq <- calc_excess(mdq, separate_label=T, separate_light=T)
-
-# convert to data frame, use c() to remove attributes
-ae <- mat_to_df(mdq@qsip[['atom_excess']], 'excess')
-
-
-ae_qsip <- ae
-
-
-# manual calculation-------------------------------------------
-ae <- mw_011[,!names(mw_011) %in% 'mw_qsip']
-ae <- merge(ae, unique(rep_matching_011[,c('RepID', 'tmt', 'rep_number')]), all.x=T)
-
-# separate MW-light and MW-label
-aeh <- ae[ae$tmt=='18O',]
-ael <- ae[ae$tmt=='16O',]
-
-# calculate MW-heavymax
-adjust <- 12.07747
-nat_abund <- 0.002011429
-ael$mw_max <- (adjust + ael$mw_manual)
-    
-# merge, disregarding tmt
-ae <- merge(aeh[,!names(aeh) %in% 'tmt'], 
-            ael[,!names(ael) %in% 'tmt'],
-            by=c('rep_number', 'OTU'),
-            suffixes=c('_label', '_light'))
-
-# calculate atom excess
-ae <- within(ae, {
-  excess <- ((mw_manual_label - mw_manual_light)/(mw_max - mw_manual_light)) * (1 - nat_abund)
-})
-
-
-# compare calculations-----------------------------------------
-ae_011 <- merge(ae_qsip,
-                ae[,c('RepID_label', 'OTU', 'excess')],
-                by.x=c('RepID', 'OTU'),
-                by.y=c('RepID_label', 'OTU'),
-                suffixes=c('_qsip', '_manual'))
+source('test_excess_011.R')
+# returns ae_011 object
 
 # plot qSIP output against manual output
 gg_ae_011 <- ggplot(ae_011, aes(excess_manual, excess_qsip)) +
@@ -715,61 +520,8 @@ gg_ae_011 <- ggplot(ae_011, aes(excess_manual, excess_qsip)) +
 
 
 ```{r, warning=F, echo=F}
-# calc code 100
-
-mdq <- specify_qsip(mdq,
-                    abund='qPCR.16S.copies.ul',
-                    density='density.g.ml',
-                    rep_group='group',
-                    rep_id='RepID',
-                    iso='18O',
-                    iso_trt='tmt')
-
-# calculate atom excess
-mdq <- calc_excess(mdq, separate_label=F, separate_light=F)
-
-# convert to data frame, use c() to remove attributes
-ae <- mat_to_df(mdq@qsip[['atom_excess']], 'excess')
-
-names(ae)[1] <- 'group'
-ae$group <- sub('(.*)\\.(.*)', '\\2', ae$group)
-
-ae_qsip <- ae
-
-
-# manual calculation-------------------------------------------
-# add treatment (isotope) and group data for grouping
-ae <- merge(mw_100, unique(mdl[,c('RepID', 'tmt', 'group')]), all.x=T)
-
-# average MWs by OTU, group, and treatment
-ae <- aggregate(mw_manual ~ OTU + group + tmt, ae, mean, na.rm=T)
-
-# separate light and heavy MWs
-aeh <- ae[ae$tmt=='18O',]
-ael <- ae[ae$tmt=='16O',]
-
-# calculate MW-heavymax
-adjust <- 12.07747
-nat_abund <- 0.002011429
-ael$mw_max <- (adjust + ael$mw_manual)
-
-# merge, disregarding tmt
-ae <- merge(aeh[,!names(aeh) %in% 'tmt'], 
-            ael[,!names(ael) %in% 'tmt'],
-            by=c('group', 'OTU'),
-            suffixes=c('_label', '_light'))
-
-# calculate atom excess
-ae <- within(ae, {
-  excess <- ((mw_manual_label - mw_manual_light)/(mw_max - mw_manual_light)) * (1 - nat_abund)
-})
-
-
-# compare calculations-----------------------------------------
-ae_100 <- merge(ae_qsip,
-                ae[,c('group', 'OTU', 'excess')],
-                by=c('group', 'OTU'),
-                suffixes=c('_qsip', '_manual'))
+source('test_excess_100.R')
+# returns ae_100 object
 
 # plot qSIP output against manual output
 gg_ae_100 <- ggplot(ae_100, aes(excess_manual, excess_qsip)) +
@@ -787,59 +539,8 @@ gg_ae_100 <- ggplot(ae_100, aes(excess_manual, excess_qsip)) +
 
 
 ```{r, warning=F, echo=F}
-# calc code 101
-
-mdq <- specify_qsip(mdq,
-                    abund='qPCR.16S.copies.ul',
-                    density='density.g.ml',
-                    rep_id='RepID',
-                    rep_group='group',
-                    iso='18O',
-                    iso_trt='tmt')
-
-# calculate atom excess
-mdq <- calc_excess(mdq, separate_label=F, separate_light=T)
-
-# convert to data frame, use c() to remove attributes
-ae <- mat_to_df(mdq@qsip[['atom_excess']], 'excess')
-
-ae$group <- sub('^(\\w{1})(.*)', '\\1', ae$RepID)
-
-ae_qsip <- ae
-
-
-# manual calculation-------------------------------------------
-# add treatment (isotope) and group data for grouping
-ae <- merge(mw_101, unique(mdl[,c('RepID', 'tmt', 'group')]), all.x=T)
-
-# separate light and heavy MWs
-aeh <- ae[ae$tmt=='18O',]
-ael <- ae[ae$tmt=='16O',]
-
-# DON'T average heavy MWs, they've already been calculated based on averages
-
-# calculate MW-heavymax
-adjust <- 12.07747
-nat_abund <- 0.002011429
-ael$mw_max <- (adjust + ael$mw_manual)
-
-# merge together, disregarding tmt
-ae <- merge(aeh[,!names(aeh) %in% 'tmt'], 
-            ael[,!names(ael) %in% 'tmt'],
-            by=c('RepID', 'group', 'OTU'),
-            suffixes=c('_label', '_light'))
-
-# calculate atom excess
-ae <- within(ae, {
-  excess <- ((mw_manual_label - mw_manual_light)/(mw_max - mw_manual_light)) * (1 - nat_abund)
-})
-
-
-# compare calculations-----------------------------------------
-ae_101 <- merge(ae_qsip,
-                ae[,c('RepID', 'group', 'OTU', 'excess')],
-                by=c('RepID', 'group', 'OTU'),
-                suffixes=c('_qsip', '_manual'))
+source('test_excess_101.R')
+# returns ae_101 object
 
 # plot qSIP output against manual outputK
 gg_ae_101 <- ggplot(ae_101, aes(excess_manual, excess_qsip)) +
@@ -857,59 +558,8 @@ gg_ae_101 <- ggplot(ae_101, aes(excess_manual, excess_qsip)) +
 
 
 ```{r, warning=F, echo=F}
-# calc code 110
-
-mdq <- specify_qsip(md,
-                    abund='qPCR.16S.copies.ul',
-                    density='density.g.ml',
-                    rep_id='RepID',
-                    rep_group='group',
-                    iso='18O',
-                    iso_trt='tmt')
-
-# calculate atom excess
-mdq <- calc_excess(mdq, separate_label=T, separate_light=F)
-
-# convert to data frame, use c() to remove attributes
-ae <- mat_to_df(mdq@qsip[['atom_excess']], 'excess')
-
-ae$group <- sub('^(\\w{1})(.*)', '\\1', ae$RepID)
-
-ae_qsip <- ae
-
-
-# manual calculation-------------------------------------------
-# add treatment (isotope) and group data for grouping
-ae <- merge(mw_110, unique(mdl[,c('RepID', 'tmt', 'group')]), all.x=T)
-
-# separate light and heavy MWs
-aeh <- ae[ae$tmt=='18O',]
-ael <- ae[ae$tmt=='16O',]
-
-# DON'T average light MWs, they've already been calculated based on averages
-
-# calculate MW-heavymax
-adjust <- 12.07747
-nat_abund <- 0.002011429
-ael$mw_max <- (adjust + ael$mw_manual)
-
-# merge together, disregarding tmt
-ae <- merge(aeh[,!names(aeh) %in% 'tmt'], 
-            ael[,!names(ael) %in% 'tmt'],
-            by=c('RepID', 'group', 'OTU'),
-            suffixes=c('_label', '_light'))
-
-# calculate atom excess
-ae <- within(ae, {
-  excess <- ((mw_manual_label - mw_manual_light)/(mw_max - mw_manual_light)) * (1 - nat_abund)
-})
-
-
-# compare calculations-----------------------------------------
-ae_110 <- merge(ae_qsip,
-                ae[,c('RepID', 'group', 'OTU', 'excess')],
-                by=c('RepID', 'group', 'OTU'),
-                suffixes=c('_qsip', '_manual'))
+source('test_excess_110.R')
+# returns ae_110 object
 
 # plot qSIP output against manual output
 gg_ae_110 <- ggplot(ae_110, aes(excess_manual, excess_qsip)) +
@@ -927,64 +577,8 @@ gg_ae_110 <- ggplot(ae_110, aes(excess_manual, excess_qsip)) +
 
 
 ```{r, warning=F, echo=F}
-# calc code 111
-
-# combine new replicate numbers with data
-mdq <- md
-mdq@sam_data$rep_number_111 <- rep_matching$rep_number_111
-
-mdq <- specify_qsip(mdq,
-                    abund='qPCR.16S.copies.ul',
-                    density='density.g.ml',
-                    rep_id='RepID',
-                    rep_group='group',
-                    rep_num='rep_number_111',
-                    iso='18O',
-                    iso_trt='tmt')
-
-# calculate atom excess
-mdq <- calc_excess(mdq, separate_label=T, separate_light=T)
-
-# convert to data frame, use c() to remove attributes
-ae <- mat_to_df(mdq@qsip[['atom_excess']], 'excess')
-
-ae_qsip <- ae
-
-
-# manual calculation-------------------------------------------
-# add treatment (isotope) data, groups, and replicate numbers for grouping
-ae <- merge(mw_111, unique(rep_matching[,c('RepID', 'tmt', 'group', 'rep_number_111')]), all.x=T)
-
-# separate light and heavy WADs
-aeh <- ae[ae$tmt=='18O',]
-ael <- ae[ae$tmt=='16O',]
-
-# merge light and heavy, matching by replicate number, OTU, and group
-ae <- merge(aeh[,!names(aeh) %in% c('tmt', 'RepID')],
-            ael[,!names(aeh) %in% c('tmt', 'RepID')],
-            by=c('OTU', 'group', 'rep_number_111'),
-            suffixes=c('_label', '_light'))
-
-# calculate atom excess
-adjust <- 12.07747
-nat_abund <- 0.002011429
-#
-ae <- within(ae, {
-  mw_max <- (adjust + mw_manual_light)
-  excess <- ((mw_manual_label - mw_manual_light)/(mw_max - mw_manual_light)) * (1 - nat_abund)
-})
-
-# get RepID again
-ae <- merge(unique(rep_matching[,c('RepID', 'tmt', 'group', 'rep_number_111')]),
-            ae,
-            all.y=T)
-ae$rep_number_111 <- NULL
-
-# compare calculations-----------------------------------------
-ae_111 <- merge(ae_qsip,
-                ae[,c('RepID', 'OTU', 'excess')],
-                by=c('RepID', 'OTU'),
-                suffixes=c('_qsip', '_manual'))
+source('test_excess_111.R')
+# returns ae_111 object
 
 # plot qSIP output against manual output
 gg_ae_111 <- ggplot(ae_111, aes(excess_manual, excess_qsip)) +
